add close action

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#one">Who we are</a></li>
                     <li><a href="#two">What we do</a></li>
                     <li><a href="#three">Get in touch</a></li>
+                    <li><a href="#closeApp">Close</a></li>
                 </ul>
             </nav>
         </div>
@@ -174,6 +175,16 @@
                     </section>
                 </div>
             </div>
+
+
+
+
+        </section>
+
+
+        <!-- Close -->
+        <section id="closeApp" class="wrapper style1 fullscreen fade-up">
+
         </section>
 
     </div>
