--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 </head>
 
 <body>
+
+
+
     <!-- Sidebar -->
     <section id="sidebar">
+        <!-- <button id="closeApp" type="button">Exit!</button> -->
+
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">Welcome</a></li>
+                    <li><a href="#closeApp">Welcome</a></li>
                     <li><a href="#one">Who we are</a></li>
                     <li><a href="#two">What we do</a></li>
                     <li><a href="#three">Get in touch</a></li>
-                    <li><a href="#closeApp">Close</a></li>
+                    <li><button id="closeApp" class="close" type="button">Exit!</button> </li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +32,7 @@
     <div id="wrapper">
 
         <!-- Intro -->
-        <section id="intro" class="wrapper style1 fullscreen fade-up">
+        <section id="closeApp" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
                 <h1>Electron tutorial app!</h1>
                 <p>Hopefully this helps someone to get up to speed with electron.</p>
@@ -199,6 +204,7 @@
         </div>
     </footer>
 
+    <script src="src/index.js"></script>
     <!-- Scripts -->
     <script>
         window.$ = window.jQuery = require('./assets/js/jquery.min.js');
@@ -208,6 +214,7 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
